--- a/src/OurTime.Infrastructure/OurTime.Infrastructure.csproj
+++ b/src/OurTime.Infrastructure/OurTime.Infrastructure.csproj
@@ -1,14 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\OurTime.Infrastructure\OurTime.Infrastructure.csproj" />
     <ProjectReference Include="..\OurTime.Application\OurTime.Application.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
