--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,36 +1,45 @@
-# This workflow will build the GithubActionsDemo project
-
-name: GithubActionsDemo
+name: Deploy OurTime to Azure VM
 
 on:
   push:
-    branches:
-    - "main"
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-
-    - name: Install .NET SDK
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '8.0.x'
-
-    - name: Check out this repo
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Restore dependencies (install Nuget packages)
-      run: dotnet restore
-
-    - name: Build and publish the app
-      run: |
-        dotnet build --no-restore
-        dotnet publish -c Release -o ./publish        
-
-    - name: Upload app artifacts to Github
-      uses: actions/upload-artifact@v4
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        name: app-artifacts
-        path: ./publish
+        dotnet-version: 8.0.x
+
+    - name: Build and Publish
+      run: |
+        dotnet publish OurTime.WebUI/OurTime.WebUI.csproj -c Release -o published --no-restore
+
+    - name: Deploy to VM via SCP
+      uses: appleboy/scp-action@v0.1.6
+      with:
+        host: ${{ secrets.VM_IP }}
+        username: ${{ secrets.VM_USERNAME }}
+        password: ${{ secrets.VM_PASSWORD }}
+        port: 22
+        source: "published/"
+        target: "/var/www/ourtime"
+
+    - name: Restart OurTime Service
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.VM_IP }}
+        username: ${{ secrets.VM_USERNAME }}
+        password: ${{ secrets.VM_PASSWORD }}
+        port: 22
+        script: |
+          sudo systemctl stop myapp.service
+          sudo systemctl daemon-reload
+          sudo systemctl start myapp.service
+          echo "OurTime.WebUI deployed and service restarted!"
