--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
         username: ${{ secrets.VM_USERNAME }}
         password: ${{ secrets.VM_PASSWORD }}
         port: 22
-        source: "published/"
+        source: "published/*"
         target: "/var/www/ourtime"
 
     - name: Restart OurTime Service
