--- a/src/OurTime.Infrastructure/OurTime.Infrastructure.csproj
+++ b/src/OurTime.Infrastructure/OurTime.Infrastructure.csproj
@@ -4,6 +4,12 @@
     <ProjectReference Include="..\OurTime.Application\OurTime.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
