--- a/src/OurTime.Application/OurTime.Application.csproj
+++ b/src/OurTime.Application/OurTime.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\OurTime.Domain\OurTime.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
