SCRUM-78 feat: implement secure SQL connection via .env in Program.cs and appsettings.json

--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:otwatches.database.windows.net,1433;Initial Catalog=WatchCatalogDB;Persist Security Info=False;User ID=azureadmin;Password=Otwatches1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:{AZURE_SQL_SERVER},1433;Initial Catalog={AZURE_SQL_DATABASE};User ID={AZURE_SQL_USER};Password={AZURE_SQL_PASSWORD};Encrypt=True;"
   },
   "Logging": {
     "LogLevel": {
