--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:otwatches.database.windows.net,1433;Initial Catalog=WatchCatalogDB;Persist Security Info=False;User ID=azureadmin;Password=Otwatches1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "ExternalApis": {
+    "ReviewEngine": "https://review.agreeablewater-71863421.swedencentral.azurecontainerapps.io"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
