git commit -m "SCRUM-66 <Uppdaterat API service, eget fungerande api>"

--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -3,7 +3,8 @@
     "DefaultConnection": "Server=tcp:otwatches.database.windows.net,1433;Initial Catalog=WatchCatalogDB;Persist Security Info=False;User ID=azureadmin;Password=Otwatches1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "ExternalApis": {
-    "ReviewEngine": "https://review.agreeablewater-71863421.swedencentral.azurecontainerapps.io"
+    "ReviewEngine": "https://review.agreeablewater-71863421.swedencentral.azurecontainerapps.io",
+    "ReviewEngineApiKey": "a0170370-cab1-4a7e-9392-4806c463c98c"
   },
   "Logging": {
     "LogLevel": {
