git commit -m "SCRUM-87 <Fungerande API eget, samt connectar till externa swagger ui.>"

--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:{AZURE_SQL_SERVER},1433;Initial Catalog={AZURE_SQL_DATABASE};User ID={AZURE_SQL_USER};Password={AZURE_SQL_PASSWORD};Encrypt=True;"
   },
+  "ExternalApis": {
+    "ReviewEngine": "", 
+    "ReviewEngineApiKey": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
