--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:{AZURE_SQL_SERVER},1433;Initial Catalog={AZURE_SQL_DATABASE};User ID={AZURE_SQL_USER};Password={AZURE_SQL_PASSWORD};Encrypt=True;"
+    "DefaultConnection": "Server=tcp:YOUR_AZURE_SQL_SERVER.database.windows.net,1433;Initial Catalog=YOUR_DATABASE_NAME;User ID=YOUR_USERNAME;Password=YOUR_PASSWORD;Encrypt=True;"
   },
   "ExternalApis": {
     "ReviewEngine": "", 
