Uppdaterad connection string enligt miljövariabler

--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -1,10 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:YOUR_AZURE_SQL_SERVER.database.windows.net,1433;Initial Catalog=YOUR_DATABASE_NAME;User ID=YOUR_USERNAME;Password=YOUR_PASSWORD;Encrypt=True;"
+    "DefaultConnection": "Server=tcp:otwatches.database.windows.net,1433;Initial Catalog=WatchCatalogDB;User ID=azureadmin;Password=Otwatches1;Encrypt=True;"
   },
   "ExternalApis": {
-    "ReviewEngine": "", 
+    "ReviewEngine": "https://review.agreeablewater-71863421.swedencentral.azurecontainerapps.io",
     "ReviewEngineApiKey": ""
+  },
+  "ReviewAuth": {
+    // Inloggningsuppgifter om du använder användare/lösen istället för API-nyckel
+    "User": "AlbinCLO",
+    "Password": "Albin"
   },
   "Logging": {
     "LogLevel": {
