Uppdaterad appsettings.json

--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -1,15 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:otwatches.database.windows.net,1433;Initial Catalog=WatchCatalogDB;User ID=azureadmin;Password=Otwatches1;Encrypt=True;"
+    "DefaultConnection": "Server=tcp:{AZURE_SQL_SERVER},1433;Initial Catalog={AZURE_SQL_DATABASE};User ID={AZURE_SQL_USER};Password={AZURE_SQL_PASSWORD};Encrypt=True;"
   },
   "ExternalApis": {
-    "ReviewEngine": "https://review.agreeablewater-71863421.swedencentral.azurecontainerapps.io",
+    "ReviewEngine": "",
     "ReviewEngineApiKey": ""
   },
   "ReviewAuth": {
-    // Inloggningsuppgifter om du använder användare/lösen istället för API-nyckel
-    "User": "AlbinCLO",
-    "Password": "Albin"
+    "User": "",
+    "Password": ""
   },
   "Logging": {
     "LogLevel": {
