--- a/src/OurTime.WebUI/appsettings.json
+++ b/src/OurTime.WebUI/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=tcp:{AZURE_SQL_SERVER},1433;Initial Catalog={AZURE_SQL_DATABASE};User ID={AZURE_SQL_USER};Password={AZURE_SQL_PASSWORD};Encrypt=True;"
   },
   "ExternalApis": {
-    "ReviewEngine": "",
+    "ReviewEngine": ""
   },
   "ReviewAuth": {
     "User": "",
