--- a/src/OurTime.WebUI/OurTime.WebUI.csproj
+++ b/src/OurTime.WebUI/OurTime.WebUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\OurTime.Domain\OurTime.Domain.csproj" />
 		<ProjectReference Include="..\OurTime.Infrastructure\OurTime.Infrastructure.csproj" />
 		<ProjectReference Include="..\OurTime.Application\OurTime.Application.csproj" />
 	</ItemGroup>
@@ -31,6 +32,10 @@
 		<None Update=".env">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Data\" />
 	</ItemGroup>
 
 </Project>
